--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <header>
         <img src="Ressources/Logo V2 Clair@0.5x.png" alt="Logo" width="50" height="50">
         <div>
-            <a href="Accueil.html">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="#">Produits</a>
             <a href="#">À propos</a>
             <a href="Contact.html">Contact</a>
