--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="banner">
         <h1>Titre de la bannière</h1>
         <h2>Sous-titre de la bannière</h2>
-        <button>Contact</button>
+        <button <a href="Contact.html">Contact</a>>Contact</button>
     </div>
 
     <div class="box">
