--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#">À propos</a>
             <a href="Contact.html">Contact</a>
         </div>
-        <button onclick="window.location.href='contact.html'">Button</button>
+        <button onclick="window.location.href='contact.html'">Contact</button>
     </header>
 
     <div class="banner">
@@ -23,6 +23,15 @@
 
     <div class="box">
         <h1>Mon titre principal</h1>
+    </div>
+
+    <div class="container">
+        <div class="col1">
+            <p>Contenu de la première colonne</p>
+        </div>
+        <div class="col2">
+            <img src="image.jpg" alt="Image">
+        </div>
     </div>
 
     <div>
